fixed issue whitespace appearing after browser resizing

--- a/src/LogInBox/login.module.css
+++ b/src/LogInBox/login.module.css
@@ -29,6 +29,7 @@ form {
     background-image: url('./minimalist.jpg'); 
     background-repeat: no-repeat;
     background-size: cover;
+    overflow: hidden;
 }
 
 
